# CG-projeto

./: .gitignore  README.md
common/include/: utils.h  vec.h  vertex.h
engine/: CMakeLists.txt  Makefile  cone.3d  scene.xml
engine/include/: Frustum.h  Light.h  Model.h  World.h  engine.h
engine/src/: engine.cpp  main.cpp
files/models/: bezier_10.3d  box.3d  box_2_3.3d  boxtex.3d  cone.3d  cone_1_2_4_3.3d  cylinder.3d  plane.3d  plane_2_3.3d  sphere.3d  sphere_1_8_8.3d  torus.3d
files/patches/: curved.txt  flat.txt
files/scenes/: scene_box.xml  scene_cone.xml  scene_cylinder.xml  scene_move1.xml  scene_plane.xml  scene_sphere.xml  scene_teapot.xml  scene_texture.xml  scene_torus.xml  scene_trans1.xml  scene_trans2.xml  test_4_6.xml  testecone.xml  texture_scene.xml
files/scripts/: asteroid_belt_generator.py
files/solar-system/: comet.3d  comettex.3d  sky.3d  skytex.3d  solar-system-final.xml  solar-system-hermite.xml  solar-system-move.xml  solar-system.xml  solar-system2-bezier.xml  solar-system2.xml  sphere.3d  spheretex.3d  ss.xml  torus.3d  torustex.3d
files/test_scenes/: test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml
generator/: CMakeLists.txt  Makefile
generator/include/: generator.h
generator/src/: generator.cpp  generator.h  main.cpp
